--- a/single-cluster/manifests/fleet.yaml
+++ b/single-cluster/manifests/fleet.yaml
@@ -3,5 +3,5 @@
 # The default namespace to apply to resources that are namespaced
 # but do not specify a namespace.  In this example no resources
 # are configured with a namespace so this default will apply
-namespace: fleet-manifest-example
+namespace: fleet-manifest-examples
 
